dev/sass/media/_media_max_width768.scss
@use '../variables' as variables;

@media screen and (max-width: 768px) {
    .first-screen__title {
        font-size: 46px;
    }

    .container-tools {
        .text-wrapper {
            padding: 72px 20px;
        }
    }

    .section-title {
        font-size: 38px;

        &_sm {
            font-size: 24px;
        }
    }

    .section-subtitle_sm {
        font-size: 18px;
    }

    .services__grid {
        grid-template-columns: 1fr;
    }

    .tools {
        background: url(./assets/img/tools.png) center / cover no-repeat;
    }

    .img-wrapper {
        display: none;
    }

    .clients__svg-wrapper {
        flex-direction: column;
        gap: 72px;
    }

    .footer__content {
        flex-direction: column;
        align-items: center;
    }

    .footer__newsletter {
        flex-direction: column;

        &-content {
            align-items: center;
        }
    }

    .footer__links {
        justify-content: space-between;

        &-box {
            width: initial;
        }
    }

    .footer__copyright {
        flex-direction: column;
    }
}

